[UTF-8][Japanese]

*Ver3.0β4 : 2015/xx/xx

-記法の[http://adiary.org/v3man/Satsuki-detail/escape:エスケープ表記動作]を整理しました。
-【アルバム】D&Dで自動アップロードする機能をつけました。
-【アルバム】CTRL+クリックで直接ダウンロードする機能をつけました。
-【アルバム】Exif除去機能を付けました。
-【fix】フィルター記法を{[[&http://adiary.org]]}のように{[[ ]]}中に書けない。
-【Markdown】【fix】行頭以外にTABを入力した時の挙動が正しくない。
-【Markdown】【fix】リスト入れ子時の動作が正しくない。余計な{<p>}タグが出る。
-【Markdown】【fix】通常文章ブロックの途中から引用ブロック等を書くことができない。
-【Markdown】【fix】引用ブロック（{>}）の手前にスペースを書くことができない。
-【Markdown】リスト入れ子判別時、段差が1でも入れ子として認識するようにしました。((この方がより本家に近い形になります。従来は実装では4つの段差が必要でした。))
-他多数

*Ver3.0β3 : 2014/12/29

-{<teatarea>} でTABが入力できるようになりました。
-github/gistのソースコード貼り付けが簡単にできるようになりました。（[http://adiary.org/v3man/Satsuki-tag/url-filter:#github:参考]）
-記事のタグに使える文字を一部制限しました。((何でも自由に使えすぎて微妙なことになっていました……。))
-記事の記法マニュアルを整備すると共にバグ修正、細かな仕様変更、機能追加を行いました。
-リンク時のrel設定が HTML5 的に美しくないので、"data-*"属性設定に変更しました。
-markdown記法中にさつきタグを記述した際、その処理結果に対して更に「強調」などのMarkdown記法処理を行わないようにしました。
-tex記法の実体を[g:mimeTeX]から[g:Google Chart API]に変更しました。((mimeTeXを使う場合は{[[mtex:]]}記法を使用してください。))
-ソースコードマークアップを SyntaxHighlighter から highlight.js に変更しました。
-adiary.jsのDOM要素に対する機能付加の方法を変更しました。
-mod_rewrite等でのアクセスURL変更時に、付加情報の再生成を促すメッセージを出すようにしました。
-バージョンアップ時のアップデートを自動処理するようにしまた。
-【アルバム】ファイル名が変更できるようになりました。
-【アルバム】ファイル名で一覧表示できるようになりました。
-【plugin】メール通知プラグインでブログタイトルを入力できるようにしました。記事URLを本文に書くようにしました。
-【plugin】検索ボックスに設定機能を追加しました。
-【fix】プラグイン設定の個別モジュールの設定画面が表示されない。
-【fix】Windows環境でタグ情報の保存に失敗する。[key:0352:原因詳細]。（Thanks to 手石）
-【fix】コンテンツリストでリーフのないノードを指定した場合に内部エラーになる。
-【fix】関連記事がないのに、関連記事の見出しが出力される。
-【fix】画像以外のファイルをアップロードした際、アイコンが埋め込まれない。
-【fix】リンク文字列など、タグの区切りの末尾にマッチするワードで記事を検索すると、検索語を含む文字列が2重に表示される。
-【fix】記事タイトルがタイトルヘッダに出力されていない。
-【fix】markdown記法でHTMLブロックが閉じていない時、無限ループしてしまう。
-【fix】テーブル記法で、各行の最後のカラムが空の時にHTMLに{<td>}が展開されない。
-【fix】Google Mapのurl-filterが動作していなかった。（Google側の仕様変更のため）
-【fix】アルバムで表示形式を変えた時、選択状態が維持されていなかった。
-【fix】アルバムでディレクトリ内のファイルを取得するとき「.」で始まるファイルを無視していなかった。
-【fix】テキストDB時に、ブログ作成時不要なエラーメッセージが表示されていた。
-【fix】プライベートモード設定変更時に、ファイル書き込みエラーがでていた。