@@ -156,6 +156,13 @@ allow_com  <@v.allow_com><br>
 </div> <!-- End of #adiary-body -->
 
 
+<@> adiary.js用のメッセージ
+<div style="display: none">
+<span id="ajs-ok">OK</span>
+<span id="ajs-cancel">キャンセル</span>
+<span id="ajs-confirm">確認</span>
+</div>
+
 <script>
 var Blogpath='<@v.myself>';
 var ScriptDir='<@Basepath><@v.script_dir>';
