@@ -113,6 +113,7 @@
 <span id="image-path"><@Basepath><@v.blogimg_dir()></span>
 <span id="icon-path"><@Basepath><@v.album_icons></span>
 <span id="uploading-msg">Now uploading</span>
+<span id="msg-delete-date">削除日</span>
 
 <span id="msg-load-error">画像フォルダが存在しないか情報をロードできません。</span>
 <span id="msg-fail-reload">リロードに失敗しました。</span>
@@ -121,8 +122,8 @@
 <span id="msg-fail-rename-file">ファイル名の変更に失敗しました</span>
 <span id="msg-fail-create">フォルダの作成に失敗しました。</span>
 <span id="msg-confirm-trash">ゴミ箱を空を空にしますか？</span>
-<span id="msg-fail-mv-files">ファイルの移動に失敗しました（移動先に同じファイル名がありませんか？）%f</span>
-<span id="msg-fail-mv-folder">フォルダの移動に失敗しました（移動先に同じフォルダ名がありませんか？）%f</span>
-<span id="msg-exif-notfound">Exif情報を持つJPEGファイルはありません。</span>
+<span id="msg-fail-mv-files">ファイルの移動に失敗しました（移動先に同じ名前のファイルがありませんか？）%f</span>
+<span id="msg-fail-mv-folder">フォルダの移動に失敗しました（移動先に同じ名前のフォルダがありませんか？）%f</span>
+<span id="msg-exif-notfound">Exifを持つJPEGファイルはありません。</span>
 <span id="msg-load-exif-error">Exif画像の検索に失敗しました。</span>
 </div>
