@@ -74,4 +74,9 @@
 </form>
 </div>
 
+
+
 <@call('_sub/ajax_messages')>
+<div style="display:none">
+<span id="msg-sample-has-id">モジュール「%m」のサンプルHTMLがid属性を持っています。"id"ではなく"data-id"を使用してください。<br><p>%i</p></span>
+</div>
