@@ -3,15 +3,19 @@
 *Ver3.0β4 : 2015/xx/xx
 
 -記法の[http://adiary.org/v3man/Satsuki-detail/escape:エスケープ表記動作]を整理しました。
+-確認ダイアログをブラウザ標準の「confirm」から変更しました。
 -【アルバム】D&Dで自動アップロードする機能をつけました。
 -【アルバム】CTRL+クリックで直接ダウンロードする機能をつけました。
--【アルバム】Exif除去機能を付けました。
--【fix】フィルター記法を{[[&http://adiary.org]]}のように{[[ ]]}中に書けない。
+-【アルバム】Exif除去機能を付けました。((JPEG形式のみ。画像再圧縮なしです。TIFF形式は非対応。))
+-【アルバム】特殊文字「\ : * ? " ' {<} {>} | &」をファイル名等に使用できないようにしました。
+-【アルバム】ゴミ箱に入れる際、入れた日時をファイル名に付加するようにしました。
+-【アルバム】【fix】ファイルを移動した際、サムネイルファイルが残り続けることがあった。
 -【Markdown】【fix】行頭以外にTABを入力した時の挙動が正しくない。
 -【Markdown】【fix】リスト入れ子時の動作が正しくない。余計な{<p>}タグが出る。
 -【Markdown】【fix】通常文章ブロックの途中から引用ブロック等を書くことができない。
 -【Markdown】【fix】引用ブロック（{>}）の手前にスペースを書くことができない。
 -【Markdown】リスト入れ子判別時、段差が1でも入れ子として認識するようにしました。((この方がより本家に近い形になります。従来は実装では4つの段差が必要でした。))
+-【fix】フィルター記法を{[[&http://adiary.org]]}のように{[[ ]]}中に書けない。
 -他多数
 
 *Ver3.0β3 : 2014/12/29
